--- a/communallib/build.gradle
+++ b/communallib/build.gradle
@@ -11,8 +11,8 @@ android {
     defaultConfig {
         minSdkVersion 21
         targetSdkVersion 29
-        versionCode 2
-        versionName "1.0.1"
+        versionCode 3
+        versionName "1.0.2"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles 'consumer-rules.pro'
@@ -55,7 +55,7 @@ dependencies {
     api 'com.tencent.bugly:nativecrashreport:3.7.1'
 
     // RecyclerView适配器
-    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.47-androidx'
+    api 'com.github.CymChad:BaseRecyclerViewAdapterHelper:2.9.50'
 
     api 'com.scwang.smartrefresh:SmartRefreshLayout:1.1.0'
     api 'com.scwang.smartrefresh:SmartRefreshHeader:1.1.0'
@@ -116,7 +116,7 @@ def libName = "Communal"
 //发布到组织名称名字，必须填写
 group = "com.egee.Communal"
 // 版本号，下次更新是只需要更改版本号即可
-version = "1.0.1"
+version = "1.0.2"
 //上面配置后上传至JCenter后的编译路径是这样的： compile 'com.egee.Communal:communallib:1.0.0'
 
 //生成源文件
