--- a/communallib/src/main/AndroidManifest.xml
+++ b/communallib/src/main/AndroidManifest.xml
@@ -1,6 +1,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.liwk.retrofitlib" >
+    package="com.liwk.retrofitlib">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <!--    Android 10以下的设备中仍然获取设备IMEI等信息  -->
+    <uses-permission
+        android:name="android.permission.READ_PHONE_STATE"
+        android:maxSdkVersion="28" />
 </manifest>
